--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -52,7 +52,7 @@
         <% @comments.each do |comment| %>
             <li class="comments_list">
               <%= comment.text%>
-              <%= link_to current_user.name, user_path(@prototype.user_id), class: :comment_user %>
+              <%= link_to current_user.name, user_path(current_user.id), class: :comment_user %>
             </li>
             <% end %>
       <% end %>
