--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,13 +13,13 @@
         </div>
 
         <div class="field">
-          <%= f.label :password, "パスワード（6文字以上）" %><br />
+          <%= f.label :encrypted_password, "パスワード（6文字以上）" %><br />
           <%= f.password_field :password, autocomplete: "new-password" %>
         </div>
 
         <div class="field">
-          <%= f.label :password, "パスワード再入力" %><br />
-          <%= f.password_field :password, autocomplete: "new-password" %>
+          <%= f.label :encrypted_password, "パスワード再入力" %><br />
+          <%= f.password_field :encrypted_password, autocomplete: "new-password" %>
         </div>
 
         <div class="field">
