--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
 
         <div class="field">
           <%= f.label :encrypted_password, "パスワード（6文字以上）" %><br />
-          <%= f.password_field :password, autocomplete: "new-password" %>
+          <%= f.password_field :encrypted_password, autocomplete: "new-password" %>
         </div>
 
         <div class="field">
